[tool.poetry]
name = "fastapi-utilities"
version = "0.1.0"
description = "Reusable utilities for FastAPI"
authors = ["Priyanshu Panwar <priyanshu009ch@gmail.com>"]
readme = "README.md"
keywords = ["fastapi", "utilities", "utils"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[tool.poetry.dependencies]
python = "^3.7"

fastapi = "*"
pydantic = "*"
sqlalchemy = "*"
croniter = "^1.0.13"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "^0.21.1"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
